<resources>
    <string name="app_name">Sandwich Club</string>
    <string name="reset">Reset</string>
    <string name="sandwich_also_known_as_label">Also known as:</string>
    <string name="sandwich_place_of_origin_label">Place of origin:</string>
    <string name="sandwich_description_label">Description:</string>
    <string name="sandwich_ingredients_label">Ingredients:</string>
    <string name="image_content_description">Something here as a content</string>
</resources>
